added price predictor in flask without ml and added the frontend endpoints

--- a/chromecommentextension/popup.html
+++ b/chromecommentextension/popup.html
@@ -194,7 +194,7 @@
                     <small id="stateHelp2" class="form-text text-muted" style="font-size: x-small;">Where product
                         to be delivered</small>
                 </div>
-                <button type="button" id="submitData" class="btn btn-primary">Submit</button>
+                <button type="button" id="predictData" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
